--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -13,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/firebase": "^1.15.0",
+    "@genkit-ai/googleai": "^1.15.0",
+    "@genkit-ai/next": "^1.15.0",
     "@hookform/resolvers": "^4.1.3",
     "@octokit/rest": "^21.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -46,7 +46,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.14.1",
+    "genkit": "^1.15.0",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
@@ -68,7 +68,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
-    "genkit-cli": "^1.14.1",
+    "genkit-cli": "^1.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
