--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/googleai": "^1.15.0",
     "@hookform/resolvers": "^4.1.3",
     "@octokit/rest": "^21.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
