--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -12,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@octokit/rest": "^22.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -61,7 +61,7 @@
     "@types/uuid": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "tsx": "^4.16.2"
+    "tsx": "^4.16.2",
+    "typescript": "^5"
   }
 }
